bp-card 的展示 与bp-tag 的展示。

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
 	{{content-for "body"}}
 	<script src="{{rootURL}}assets/vendor.js"></script>
 	<script src="{{rootURL}}assets/bp-components-ui.js"></script>
+	<!-- <script src="http://at.alicdn.com/t/font_1054565_egdybpcgyc9.js"></script> -->
 	{{content-for "body-footer"}}
 </body>
 
