--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
 	{{content-for "head"}}
 	<link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
 	<link integrity="" rel="stylesheet" href="{{rootURL}}assets/bp-components-ui.css">
+    <link rel="icon" href="/favicon.ico">
+
 	{{content-for "head-footer"}}
 </head>
 
