新增 icon以及表格默认排序

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-<meta name="bp-components-ui/config/environment" content="%7B%22modulePrefix%22%3A%22bp-components-ui%22%2C%22podModulePrefix%22%3A%22bp-components-ui/modules%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22/%22%2C%22locationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22bp-components-ui%22%2C%22version%22%3A%220.2.0+7513e757%22%7D%2C%22QueryAddress%22%3A%7B%22host%22%3A%22http%3A//59.110.31.50%22%2C%22port%22%3A9202%2C%22version%22%3A%22v1.0%22%2C%22db%22%3A%22DL%22%7D%2C%22Host%22%3A%22http%3A//59.110.31.50%22%2C%22Port%22%3A9201%2C%22Version%22%3A%22v1.0%22%2C%22DB%22%3A%22DL%22%2C%22baseURL%22%3A%22/bp-components-ui%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
-	<link integrity="" rel="stylesheet" href="./assets/vendor-000aafa6c28c9d2d232df05fa78ffd10.css">
-	<link integrity="" rel="stylesheet" href="./assets/bp-components-ui-b84040d66d415cd2783f25095552ebb9.css">
-    <link rel="icon" href="./favicon.ico">
+<meta name="bp-components-ui/config/environment" content="%7B%22modulePrefix%22%3A%22bp-components-ui%22%2C%22podModulePrefix%22%3A%22bp-components-ui/modules%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22https%3A//pharbersdeveloper.github.io/BP-Components-UI/%22%2C%22locationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22bp-components-ui%22%2C%22version%22%3A%220.2.0+e8898b98%22%7D%2C%22QueryAddress%22%3A%7B%22host%22%3A%22http%3A//59.110.31.50%22%2C%22port%22%3A9202%2C%22version%22%3A%22v1.0%22%2C%22db%22%3A%22DL%22%7D%2C%22Host%22%3A%22http%3A//59.110.31.50%22%2C%22Port%22%3A9201%2C%22Version%22%3A%22v1.0%22%2C%22DB%22%3A%22DL%22%2C%22baseURL%22%3A%22/bp-components-ui%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+	<link integrity="" rel="stylesheet" href="https://pharbersdeveloper.github.io/BP-Components-UI/assets/vendor-000aafa6c28c9d2d232df05fa78ffd10.css">
+	<link integrity="" rel="stylesheet" href="https://pharbersdeveloper.github.io/BP-Components-UI/assets/bp-components-ui-b84040d66d415cd2783f25095552ebb9.css">
+    <link rel="icon" href="/favicon.ico">
 
 	
 </head>
 
 <body>
 	
-	<script src="./assets/vendor-baca5ed8e29076f140a0b7cbc98e486a.js" integrity="sha256-fu9vcCqlXE1ij5WCp5fb3xuEeLEb4gvUTn0yxa4vbZI= sha512-SpfE8mXuA8MhEayuZKrPJDmvm/amkfiJIFRhyjL8YuLcfeTPpIEe/kaDT+82xzOPzs1/2O+n/myJ9BzZZsgDOg==" ></script>
-	<script src="./assets/bp-components-ui-e3dd0c9f1598e5519538aeb26b000966.js" integrity="sha256-f39It6yrllhlf+irptsLCUvkANIRjv4nVBlr0swAQIc= sha512-BbQbRRZqA1h7wXx2Wt613xwnGiJAL/Z08tKpbpxXzsaFpOgG3u+gaQjIFp5Os/tBhzEgB2krBj8mahunu4SSMA==" ></script>
+	<script src="https://pharbersdeveloper.github.io/BP-Components-UI/assets/vendor-75e7730014583dbfa8ce2629fd4e14a0.js"></script>
+	<script src="https://pharbersdeveloper.github.io/BP-Components-UI/assets/bp-components-ui-62316c14a866e5e7885fffdad8f23f24.js"></script>
 	<!-- <script src="http://at.alicdn.com/t/font_1054565_egdybpcgyc9.js"></script> -->
 	<div id="ember-bootstrap-wormhole"></div>
 </body>
